# learnopengl

./: .clang-format  .gitignore  CMakeLists.txt  README.md
inc/: main.hpp
inc/glad/: glad.c  glad.h
src/: main.cpp
